re PR other/42611 (ICE in tree_low_cst, at tree.c:5014)

PR other/42611
	* cfgexpand.c (expand_one_var): Diagnose too large variables.

	* gcc.dg/pr42611.c: New test.

From-SVN: r155641